# CS461-HW2

./: CMakeLists.txt  README.md
output/: ctree_irrel_features  ctree_sigma_error_test  ctree_sigma_error_train  ctree_ssize_error_test  ctree_ssize_error_train  default_xvals  default_yvals  testing_xvals  testing_yvals  training_xvals  training_yvals
src/: 1-3.c  CMakeLists.txt  arraylist_test.c  ctree_sigma_test.c  ctree_ssize_test.c  ctree_test.c  default_generator.c  dtree_depth_test.c  dtree_ssize_test.c  main.c  p2_generator.c  regression_minweight.c  regression_test.c
src/core/: CMakeLists.txt  arraylist.c  assert.c  dataset_generator.c  fileio.c  random.c  stat.c  stringappend.c
src/include/: arraylist.h  assert.h  classtree.h  dataset_generator.h  decisiontree.h  fileio.h  linear_regression.h  logistic_regression.h  math_lib.h  random.h  stat.h  stringappend.h
src/models/: CMakeLists.txt  classtree.c  decisiontree.c  linear_regression.c  logistic_regression.c
